[tool.poetry]
name = "pylog"
version = "0.1.0"
description = "A simple keylogger written in Python."
authors = ["Mihir Vagal <mihir.vagal.2009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynput = "^1.7.6"
black = "^23.1.0"
pre-commit = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
